@@ -2,13 +2,16 @@
  * To change this license header, choose License Headers in Project Properties.
  * To change this template file, choose Tools | Templates
  * and open the template in the editor.
+ *
  */
 package com.ugurtech.library.facades;
 
-import java.util.ArrayList;
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 import java.util.Objects;
 import java.util.Vector;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 /**
  *
@@ -19,12 +22,13 @@ import java.util.Vector;
 public class PopulatingConverter<SOURCE, TARGET> {
     
     private final Class<TARGET> targetClass;
-    
     private final Vector<Populator> populators = new Vector<>();
+    
     public PopulatingConverter(Class<TARGET> targetClass) {
         this.targetClass = targetClass;
     }
-    public static <SOURCE, TARGET> PopulatingConverter<SOURCE, TARGET> of(Class<TARGET> targetClass) {
+    
+    public static <SOURCE,TARGET> PopulatingConverter<SOURCE,TARGET> of(Class<TARGET> targetClass) {
         return new PopulatingConverter<>(targetClass);
     }
     
@@ -33,7 +37,6 @@ public class PopulatingConverter<SOURCE, TARGET> {
         populators.forEach(populator -> {
             populator.populate(source, target);
         });
-        
         return target;
     }
     
@@ -47,11 +50,15 @@ public class PopulatingConverter<SOURCE, TARGET> {
     
     private TARGET createFromClass() {
         try {
-            return targetClass.newInstance();
+                return targetClass.getDeclaredConstructor().newInstance();
+        } catch (NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
+            Logger.getLogger(PopulatingConverter.class.getName()).log(Level.SEVERE, null, ex);
         } catch (IllegalAccessException | InstantiationException e) {
             throw new RuntimeException(e);
         }
+        return null;
     }
+    
     public void addPopulator(Populator<SOURCE, TARGET> populator) {
         if (Objects.nonNull(populator)) {
             populators.add(populator);
